--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"fullpage.js": "^4.0.20",
 		"preact": "^10.19.2",
 		"preact-iso": "^2.3.2",
 		"preact-render-to-string": "^6.3.1"
