--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"fullpage.js": "^4.0.20",
+		"@fullpage/react-fullpage": "^0.1.40",
 		"preact": "^10.19.2",
 		"preact-iso": "^2.3.2",
 		"preact-render-to-string": "^6.3.1"
