--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,14 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@fullpage/react-fullpage": "^0.1.40", 
+		"@fullpage/react-fullpage": "^0.1.40",
+		"@observablehq/plot": "^0.6.11",
 		"preact": "^10.19.2",
 		"preact-iso": "^2.3.2",
 		"preact-render-to-string": "^6.3.1"
 	},
 	"devDependencies": {
-		"@preact/preset-vite": "^2.7.0", 
+		"@preact/preset-vite": "^2.7.0",
 		"@types/node": "^20.9.4",
 		"eslint": "^8.54.0",
 		"eslint-config-preact": "^1.3.0",
