--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,20 @@
 	"dependencies": {
 		"@fullpage/react-fullpage": "^0.1.40",
 		"@observablehq/plot": "^0.6.11",
-		"d3": "^7.8.5",
 		"@preact/signals": "^1.2.2",
+		"d3": "^7.8.5",
 		"preact": "^10.19.2",
 		"preact-iso": "^2.3.2",
-		"preact-render-to-string": "^6.3.1"
+		"preact-render-to-string": "^6.3.1",
+		"throttle-debounce-ts": "^1.1.1"
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.7.0",
-		"@types/node": "^20.9.4",
+		"@types/d3": "^7.4.3",
+		"@types/node": "^20.10.0",
 		"eslint": "^8.54.0",
 		"eslint-config-preact": "^1.3.0",
-		"typescript": "^5.2.2",
-		"vite": "^5.0.0"
+		"typescript": "^5.3.2",
+		"vite": "^5.0.3"
 	}
 }
